Updated require in example and README

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "author": "Carlos Millán Soler",
   "contributors": [{
-    "name": "Luis Leiva",
+    "name": "luileito",
     "url": "https://github.com/luileito/"
   }],
   "license": "BSD-2-Clause",
