--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tracer-debug",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "A logging library for node.js built on top of 'tracer' package.",
-  "main": "tracer-debug.js",
+  "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=anything nodejs prove.js; NODE_ENV=production nodejs prove.js"
   },
