--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A logging library for node.js built on top of 'tracer' package.",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=anything nodejs prove.js; NODE_ENV=production nodejs prove.js"
+    "test": "NODE_ENV=anything nodejs test.js; NODE_ENV=production nodejs test.js"
   },
   "repository": {
     "type": "git",
